// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deviceIdentityCommandBar snapshot matches snapshot 1`] = `
<CommandBarV9
  items={
    [
      {
        "ariaLabel": "deviceIdentity.commands.save",
        "disabled": undefined,
        "icon": <SaveRegular />,
        "key": "Save",
        "name": "deviceIdentity.commands.save",
        "onClick": [MockFunction],
      },
      {
        "ariaLabel": "deviceIdentity.commands.manageKeys.ariaLabel",
        "disabled": true,
        "icon": <KeyRegular />,
        "key": "manageKeys",
        "name": "deviceIdentity.commands.manageKeys.label",
        "subMenuProps": {
          "items": [
            {
              "ariaLabel": "deviceIdentity.commands.regeneratePrimary.ariaLabel",
              "disabled": true,
              "icon": <KeyRegular />,
              "key": "regeneratePrimary",
              "name": "deviceIdentity.commands.regeneratePrimary.label",
              "onClick": undefined,
            },
            {
              "ariaLabel": "deviceIdentity.commands.regenerateSecondary.ariaLabel",
              "disabled": true,
              "icon": <KeyRegular />,
              "key": "regenerateSecondary",
              "name": "deviceIdentity.commands.regenerateSecondary.label",
              "onClick": undefined,
            },
            {
              "ariaLabel": "deviceIdentity.commands.swapKeys.ariaLabel",
              "disabled": true,
              "icon": <ArrowSwapRegular />,
              "key": "swapKeys",
              "name": "deviceIdentity.commands.swapKeys.label",
              "onClick": undefined,
            },
          ],
        },
      },
    ]
  }
/>
`;

exports[`deviceIdentityCommandBar snapshot matches snapshot with disabled save 1`] = `
<CommandBarV9
  items={
    [
      {
        "ariaLabel": "deviceIdentity.commands.save",
        "disabled": true,
        "icon": <SaveRegular />,
        "key": "Save",
        "name": "deviceIdentity.commands.save",
        "onClick": [MockFunction],
      },
      {
        "ariaLabel": "deviceIdentity.commands.manageKeys.ariaLabel",
        "disabled": true,
        "icon": <KeyRegular />,
        "key": "manageKeys",
        "name": "deviceIdentity.commands.manageKeys.label",
        "subMenuProps": {
          "items": [
            {
              "ariaLabel": "deviceIdentity.commands.regeneratePrimary.ariaLabel",
              "disabled": true,
              "icon": <KeyRegular />,
              "key": "regeneratePrimary",
              "name": "deviceIdentity.commands.regeneratePrimary.label",
              "onClick": undefined,
            },
            {
              "ariaLabel": "deviceIdentity.commands.regenerateSecondary.ariaLabel",
              "disabled": true,
              "icon": <KeyRegular />,
              "key": "regenerateSecondary",
              "name": "deviceIdentity.commands.regenerateSecondary.label",
              "onClick": undefined,
            },
            {
              "ariaLabel": "deviceIdentity.commands.swapKeys.ariaLabel",
              "disabled": true,
              "icon": <ArrowSwapRegular />,
              "key": "swapKeys",
              "name": "deviceIdentity.commands.swapKeys.label",
              "onClick": undefined,
            },
          ],
        },
      },
    ]
  }
/>
`;
